--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@
                 </thead>
                 <tbody>
                     <tr class="paying">
+                        <td><a target="_blank" href="https://hugeprofits.cc/?ref=nguoique">Hugeprofits.cc</a></td>
+                        <td>15% hàng giờ trong 10 giờ</td>
+                        <td>00:13 18-07-2021</td>
+                        <td>$10</td>
+                        <td>$0</td>
+                        <td><i class="fas fa-sync fa-spin"></i></td>
+                    </tr>
+                    <tr class="paying">
                         <td><a target="_blank" href="https://bitpush.biz/?ref=nguoique">Bitpush.biz</a></td>
                         <td>1.7% hàng giờ trong 72 giờ</td>
                         <td>23:28 17-07-2021</td>
