--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <tbody>
                     <tr class="paying">
                         <td><a target="_blank" href="https://hugeprofits.cc/?ref=nguoique">Hugeprofits.cc</a></td>
-                        <td>15% hàng giờ trong 10 giờ</td>
+                        <td>15% hàng giờ trong 10 giờ (bao gồm tiền gửi)</td>
                         <td>00:13 18-07-2021</td>
                         <td>$10</td>
                         <td>$0</td>
@@ -54,7 +54,7 @@
                     </tr>
                     <tr class="paying">
                         <td><a target="_blank" href="https://bitpush.biz/?ref=nguoique">Bitpush.biz</a></td>
-                        <td>1.7% hàng giờ trong 72 giờ</td>
+                        <td>1.7% hàng giờ trong 72 giờ (bao gồm tiền gửi)</td>
                         <td>23:28 17-07-2021</td>
                         <td>$10</td>
                         <td>$2.46</td>
@@ -70,7 +70,7 @@
                     </tr>
                     <tr class="paying">
                         <td><a target="_blank" href="https://jaemoney.ltd/?ref=nguoique">Jaemoney.ltd</a></td>
-                        <td>1% hàng ngày trong 10 ngày</td>
+                        <td>1% hàng ngày trong 10 ngày (hoàn trả tiền gửi)</td>
                         <td>18:11 16-07-2021</td>
                         <td>$40</td>
                         <td>$14.64</td>
@@ -78,7 +78,7 @@
                     </tr>
                     <tr class="paying">
                         <td><a target="_blank" href="https://fxhourly.com/signup.aspx?ref=nguoique">Fxhourly.com</a></td>
-                        <td>100.2% sau một giờ</td>
+                        <td>100.2% sau một giờ (bao gồm tiền gửi)</td>
                         <td>20:41 15-07-2021</td>
                         <td>$40</td>
                         <td>$44.74</td>
@@ -86,7 +86,7 @@
                     </tr>
                     <tr class="paying">
                         <td><a target="_blank" href="https://oxenbitex.com/?ref=nguoique">Oxenbitex.com</a></td>
-                        <td>135% sau 1 ngày</td>
+                        <td>135% sau 1 ngày (bao gồm tiền gửi)</td>
                         <td>21:30 13-07-2021</td>
                         <td>$10</td>
                         <td>$16.2</td>
@@ -94,7 +94,7 @@
                     </tr>
                     <tr class="paying">
                         <td><a target="_blank" href="https://lumino.cloud/?ref=nguoique">Lumino.cloud</a></td>
-                        <td>100.5% sau 1 ngày</td>
+                        <td>100.5% sau 1 ngày (bao gồm tiền gửi)</td>
                         <td>19:56 11-07-2021</td>
                         <td>$10</td>
                         <td>$11.66</td>
@@ -102,7 +102,7 @@
                     </tr>
                     <tr class="paying">
                         <td><a target="_blank" href="https://101profit.biz/?ref=nguoique">101profit.biz</a></td>
-                        <td>101% sau 3 ngày</td>
+                        <td>101% sau 3 ngày (bao gồm tiền gửi)</td>
                         <td>12:00 11-07-2021</td>
                         <td>$10</td>
                         <td>$11.6</td>
@@ -110,7 +110,7 @@
                     </tr>
                     <tr class="paying">
                         <td><a target="_blank" href="https://www.yacht-company.com/?r=10674">Yacht-company.com</a></td>
-                        <td>1% hàng ngày trong 90 ngày</td>
+                        <td>1% hàng ngày trong 90 ngày (hoàn trả tiền gửi)</td>
                         <td>20:31 02-07-2021</td>
                         <td>$30</td>
                         <td>$10.5</td>
@@ -118,7 +118,7 @@
                     </tr>
                     <tr class="scamed">
                         <td><a target="_blank" href="https://crypto-capital.biz/?ref=nguoique">Crypto-capital.biz</a></td>
-                        <td>2% hàng ngày trong 6 ngày</td>
+                        <td>2% hàng ngày trong 6 ngày (hoàn trả tiền gửi)</td>
                         <td>12:00 01-07-2021</td>
                         <td>$40</td>
                         <td>$26.8</td>
@@ -126,7 +126,7 @@
                     </tr>
                     <tr class="paying">
                         <td><a target="_blank" href="https://blackcryptomining.com/?ref=nguoique">Blackcryptomining.com</a></td>
-                        <td>101% - 144% sau 1 ngày, 5555% sau 55 ngày</td>
+                        <td>101% - 144% sau 1 ngày, 5555% sau 55 ngày (bao gồm tiền gửi)</td>
                         <td>14:57 28-06-2021</td>
                         <td>$22</td>
                         <td>$13.35</td>
@@ -134,7 +134,7 @@
                     </tr>
                     <tr class="paying">
                         <td><a target="_blank" href="https://lutex.ltd/?user=nguoique">Lutex.ltd</a></td>
-                        <td>1% hàng ngày trong 25 ngày làm việc</td>
+                        <td>1% hàng ngày trong 25 ngày làm việc (hoàn trả tiền gửi)</td>
                         <td>22:20 25-06-2021</td>
                         <td>$10</td>
                         <td>$3.5</td>
@@ -142,7 +142,7 @@
                     </tr>
                     <tr class="paying">
                         <td><a target="_blank" href="https://ship-alliance.com/?ref=nguoique">Ship-alliance.com</a></td>
-                        <td>0.8% hàng ngày trong 150 ngày</td>
+                        <td>0.8% hàng ngày trong 150 ngày (bao gồm tiền gửi)</td>
                         <td>19:04 23-06-2021</td>
                         <td>$10</td>
                         <td>$6.5</td>
@@ -150,7 +150,7 @@
                     </tr>
                     <tr class="scamed">
                         <td><a target="_blank" href="https://aura4.finance/?ref=2106">Aura4.finance</a></td>
-                        <td>3% hàng ngày trong 30 ngày</td>
+                        <td>3% hàng ngày trong 30 ngày (hoàn trả tiền gửi)</td>
                         <td>23:25 13-06-2021</td>
                         <td>$10</td>
                         <td>$21.7</td>
@@ -158,7 +158,7 @@
                     </tr>
                     <tr class="paying">
                         <td><a target="_blank" href="https://cryptofarm.vip/?ref=nguoique">Cryptofarm.vip</a></td>
-                        <td>3% hàng ngày trong 50 ngày làm việc</td>
+                        <td>3% hàng ngày trong 50 ngày làm việc (bao gồm tiền gửi)</td>
                         <td>16:31 31-05-2021</td>
                         <td>$10</td>
                         <td>$13.1</td>
@@ -166,7 +166,7 @@
                     </tr>
                     <tr class="paying">
                         <td><a target="_blank" href="https://albet.io/nguoique">Albet.io</a></td>
-                        <td>6.3% hàng ngày trong 20 ngày</td>
+                        <td>6.3% hàng ngày trong 20 ngày làm việc (bao gồm tiền gửi)</td>
                         <td>10:40 29-05-2021</td>
                         <td>$30</td>
                         <td>$34.63</td>
