--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr class="paying">
+                    <tr class="problem">
                         <td><a target="_blank" href="https://hugeprofits.cc/?ref=nguoique">Hugeprofits.cc</a></td>
                         <td>15% hàng giờ trong 10 giờ (bao gồm tiền gửi)</td>
                         <td>00:13 18-07-2021</td>
