--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <h1>Hiếu Monster</h1>
             <p>Nhật ký đầu tư mạo hiểm trực tuyến</p>
         </header>
+        <nav>
+            <a href="https://hieu.monster/bang-chung-thanh-toan/">Bằng chứng thanh toán</a>
+        </nav>
         <main>
             <table>
                 <thead>
