--- a/bang-chung-thanh-toan/index.html
+++ b/bang-chung-thanh-toan/index.html
@@ -1377,6 +1377,14 @@
                     </thead>
                     <tbody>
                         <tr class="withdraw">
+                            <td>07:09 19-07-2021</td>
+                            <td>$0.63</td>
+                            <td>U27278415</td>
+                            <td>U32437007</td>
+                            <td>406690036</td>
+                            <td>Lợi nhuận đầu tư</td>
+                        </tr>
+                        <tr class="withdraw">
                             <td>07:16 16-07-2021</td>
                             <td>$0.63</td>
                             <td>U27278415</td>
