--- a/bang-chung-thanh-toan/index.html
+++ b/bang-chung-thanh-toan/index.html
@@ -31,7 +31,7 @@
 <body>
     <div class="container">
         <header>
-            <a href="https://hieu.monster/">Quay lại trang chủ</a>
+            <a href="https://hieu.monster/"><i class="fas fa-chevron-left"></i> Quay lại trang chủ</a>
             <h1>Bằng chứng thanh toán</h1>
             <p>Lịch sử gửi tiền và rút tiền của các dự án mà tôi tham gia</p>
         </header>
