--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="table-outer">
                 <table>
                     <thead>
-                        <tr class="paying">
+                        <tr>
                             <th>Tên chương trình</th>
                             <th>Kế hoạch đầu tư</th>
                             <th>Ngày tôi tham gia</th>
@@ -56,7 +56,7 @@
                             <td>$9.4</td>
                             <td><i class="fas fa-sync fa-spin"></i></td>
                         </tr>
-                        <tr class="paying">
+                        <tr class="problem">
                             <td><a target="_blank" href="https://bitpush.biz/?ref=nguoique">Bitpush.biz</a></td>
                             <td>1.7% hàng giờ trong 72 giờ (bao gồm tiền gửi)</td>
                             <td>23:28 17-07-2021</td>
