--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="problem">
+                        <tr class="scamed">
                             <td><a target="_blank" href="https://hugeprofits.cc/?ref=nguoique">Hugeprofits.cc</a></td>
                             <td>15% hàng giờ trong 10 giờ (bao gồm tiền gửi)</td>
                             <td>00:13 18-07-2021</td>
                             <td>$10</td>
                             <td>$9.4</td>
-                            <td><i class="fas fa-sync fa-spin"></i></td>
+                            <td>Lỗ $0.6</td>
                         </tr>
-                        <tr class="problem">
+                        <tr class="scamed">
                             <td><a target="_blank" href="https://bitpush.biz/?ref=nguoique">Bitpush.biz</a></td>
                             <td>1.7% hàng giờ trong 72 giờ (bao gồm tiền gửi)</td>
                             <td>23:28 17-07-2021</td>
                             <td>$10</td>
                             <td>$5.83</td>
-                            <td><i class="fas fa-sync fa-spin"></i></td>
+                            <td>Lỗ $4.17</i></td>
                         </tr>
                         <tr class="paying">
                             <td><a target="_blank" href="https://bico.finance/?ref=nguoique">Bico.finance</a></td>
@@ -165,7 +165,7 @@
                             <td>3% hàng ngày trong 50 ngày làm việc (bao gồm tiền gửi)</td>
                             <td>16:31 31-05-2021</td>
                             <td>$10</td>
-                            <td>$13.1</td>
+                            <td>$13.4</td>
                             <td><i class="fas fa-sync fa-spin"></i></td>
                         </tr>
                         <tr class="paying">
