--- a/bang-chung-thanh-toan/index.html
+++ b/bang-chung-thanh-toan/index.html
@@ -1069,6 +1069,14 @@
                     </thead>
                     <tbody>
                         <tr class="withdraw">
+                            <td>17:06 19-07-2021</td>
+                            <td>$0.3</td>
+                            <td>U29274294</td>
+                            <td>U32437007</td>
+                            <td>406749271</td>
+                            <td>Lợi nhuận đầu tư</td>
+                        </tr>
+                        <tr class="withdraw">
                             <td>16:39 16-07-2021</td>
                             <td>$0.3</td>
                             <td>U29274294</td>
