--- a/bang-chung-thanh-toan/index.html
+++ b/bang-chung-thanh-toan/index.html
@@ -749,6 +749,14 @@
                     </thead>
                     <tbody>
                         <tr class="withdraw">
+                            <td>20:45 19-07-2021</td>
+                            <td>$1.04</td>
+                            <td>U29965540</td>
+                            <td>U32437007</td>
+                            <td>406789875</td>
+                            <td>Lợi nhuận đầu tư</td>
+                        </tr>
+                        <tr class="withdraw">
                             <td>23:30 06-07-2021</td>
                             <td>$1.04</td>
                             <td>U29965540</td>
