--- a/bang-chung-thanh-toan/index.html
+++ b/bang-chung-thanh-toan/index.html
@@ -189,6 +189,14 @@
                     </thead>
                     <tbody>
                         <tr class="withdraw">
+                            <td>22:06 19-07-2021</td>
+                            <td>$0.36</td>
+                            <td>U2306383</td>
+                            <td>U32437007</td>
+                            <td>406804864</td>
+                            <td>Lợi nhuận đầu tư</td>
+                        </tr>
+                        <tr class="withdraw">
                             <td>23:10 18-07-2021</td>
                             <td>$0.36</td>
                             <td>U2306383</td>
@@ -1077,6 +1085,14 @@
                     </thead>
                     <tbody>
                         <tr class="withdraw">
+                            <td>16:50 20-07-2021</td>
+                            <td>$0.3</td>
+                            <td>U29274294</td>
+                            <td>U32437007</td>
+                            <td>406936415</td>
+                            <td>Lợi nhuận đầu tư</td>
+                        </tr>
+                        <tr class="withdraw">
                             <td>17:06 19-07-2021</td>
                             <td>$0.3</td>
                             <td>U29274294</td>
@@ -1392,6 +1408,14 @@
                         </tr>
                     </thead>
                     <tbody>
+                        <tr class="withdraw">
+                            <td>07:14 20-07-2021</td>
+                            <td>$0.63</td>
+                            <td>U27278415</td>
+                            <td>U32437007</td>
+                            <td>406881049</td>
+                            <td>Lợi nhuận đầu tư</td>
+                        </tr>
                         <tr class="withdraw">
                             <td>07:09 19-07-2021</td>
                             <td>$0.63</td>
