--- a/bang-chung-thanh-toan/index.html
+++ b/bang-chung-thanh-toan/index.html
@@ -249,6 +249,14 @@
                     </thead>
                     <tbody>
                         <tr class="withdraw">
+                            <td>18:31 20-07-2021</td>
+                            <td>$0.8</td>
+                            <td>U31187784</td>
+                            <td>U32437007</td>
+                            <td>406954166</td>
+                            <td>Lợi nhuận đầu tư</td>
+                        </tr>
+                        <tr class="withdraw">
                             <td>20:16 18-07-2021</td>
                             <td>$0.8</td>
                             <td>U31187784</td>
