--- a/bang-chung-thanh-toan/index.html
+++ b/bang-chung-thanh-toan/index.html
@@ -189,6 +189,14 @@
                     </thead>
                     <tbody>
                         <tr class="withdraw">
+                            <td>22:21 2-07-2021</td>
+                            <td>$0.36</td>0
+                            <td>U2306383</td>
+                            <td>U32437007</td>
+                            <td>406992033</td>
+                            <td>Lợi nhuận đầu tư</td>
+                        </tr>
+                        <tr class="withdraw">
                             <td>22:06 19-07-2021</td>
                             <td>$0.36</td>
                             <td>U2306383</td>
@@ -1093,6 +1101,14 @@
                     </thead>
                     <tbody>
                         <tr class="withdraw">
+                            <td>18:15 21-07-2021</td>
+                            <td>$0.3</td>
+                            <td>U29274294</td>
+                            <td>U32437007</td>
+                            <td>407134130</td>
+                            <td>Lợi nhuận đầu tư</td>
+                        </tr>
+                        <tr class="withdraw">
                             <td>16:50 20-07-2021</td>
                             <td>$0.3</td>
                             <td>U29274294</td>
@@ -1416,6 +1432,14 @@
                         </tr>
                     </thead>
                     <tbody>
+                        <tr class="withdraw">
+                            <td>07:13 21-07-2021</td>
+                            <td>$0.63</td>
+                            <td>U27278415</td>
+                            <td>U32437007</td>
+                            <td>407070007</td>
+                            <td>Lợi nhuận đầu tư</td>
+                        </tr>
                         <tr class="withdraw">
                             <td>07:14 20-07-2021</td>
                             <td>$0.63</td>
