--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <li>
                 <a href="https://h-earning.biz/?ref=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> H-earning.biz ($10/$0)</a>
                 <time>18:28 22-07-2021</time>
-                <p>8.37% hàng giờ trong 12 giờ</p>
+                <p>8.37% hàng giờ trong 12 giờ (bao gồm tiền gửi)</p>
             </li>
             <li>
                 <a href="https://bico.finance/?ref=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Bico.finance ($10/$4.2)</a>
