--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
         <ul class="paying">
             <li>
-                <a href="https://raise-up.org?ref=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Raise-up.org ($10/$1.7)</a>
+                <a href="https://raise-up.org?ref=nguoique" target="_blank"><i class="fas fa-pause-circle"></i> Raise-up.org ($10/$12)</a>
                 <time>18:52 22-07-2021</time>
                 <p>103% - 140% sau 1 ngày (bao gồm tiền gửi)</p>
             </li>
@@ -42,7 +42,7 @@
                 <p>3.6% hàng ngày mãi mãi</p>
             </li>
             <li>
-                <a href="https://jaemoney.ltd/?ref=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Jaemoney.ltd ($40/$17.04)</a>
+                <a href="https://jaemoney.ltd/?ref=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Jaemoney.ltd ($40/$17.84)</a>
                 <time>18:11 16-07-2021</time>
                 <p>1% hàng ngày trong 10 ngày (hoàn trả tiền gửi)</p>
             </li>
