--- a/index.html
+++ b/index.html
@@ -32,11 +32,6 @@
     <main>
         <ul class="paying">
             <li>
-                <a href="https://raise-up.org?ref=nguoique" target="_blank"><i class="fas fa-pause-circle"></i> Raise-up.org ($10/$12)</a>
-                <time>18:52 22-07-2021</time>
-                <p>103% - 140% sau 1 ngày (bao gồm tiền gửi)</p>
-            </li>
-            <li>
                 <a href="https://bico.finance/?ref=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Bico.finance ($10/$4.92)</a>
                 <time>21:15 16-07-2021</time>
                 <p>3.6% hàng ngày mãi mãi</p>
@@ -77,14 +72,14 @@
                 <p>6.3% hàng ngày trong 20 ngày làm việc (bao gồm tiền gửi)</p>
             </li>
             <li>
+                <a href="https://raise-up.org?ref=nguoique" target="_blank"><i class="fas fa-pause-circle"></i> Raise-up.org ($10/$12)</a>
+                <time>18:52 22-07-2021</time>
+                <p>103% - 140% sau 1 ngày (bao gồm tiền gửi)</p>
+            </li>
+            <li>
                 <a href="https://fxhourly.com/signup.aspx?ref=nguoique" target="_blank"><i class="fas fa-pause-circle"></i> Fxhourly.com ($40/$44.74)</a>
                 <time>20:41 15-07-2021</time>
                 <p>100.2% sau một giờ (bao gồm tiền gửi)</p>
-            </li>
-            <li>
-                <a href="https://oxenbitex.com/?ref=nguoique" target="_blank"><i class="fas fa-pause-circle"></i> Oxenbitex.com ($10/$16.2)</a>
-                <time>21:30 13-07-2021</time>
-                <p>	135% sau 1 ngày (bao gồm tiền gửi)</p>
             </li>
             <li>
                 <a href="https://lumino.cloud/?ref=nguoique" target="_blank"><i class="fas fa-pause-circle"></i> Lumino.cloud ($10/$11.66)</a>
@@ -98,6 +93,11 @@
             </li>
         </ul>
         <ul class="scamed">
+            <li>
+                <a href="https://oxenbitex.com/?ref=nguoique" target="_blank"><i class="fas fa-poop"></i> Oxenbitex.com ($10/$16.2)</a>
+                <time>21:30 13-07-2021</time>
+                <p>	135% sau 1 ngày (bao gồm tiền gửi)</p>
+            </li>
             <li>
                 <a href="https://h-earning.biz/?ref=nguoique" target="_blank"><i class="fas fa-poop"></i> H-earning.biz ($10/$4.61)</a>
                 <time>18:28 22-07-2021</time>
