--- a/index.html
+++ b/index.html
@@ -32,96 +32,114 @@
     <main>
         <ul class="paying">
             <li>
-                <a href="https://bico.finance/?ref=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Bico.finance ($10/$4.92)</a>
+                <a href="https://bico.finance/?ref=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Bico.finance</a>
                 <time>21:15 16-07-2021</time>
-                <p>3.6% hàng ngày mãi mãi</p>
+                <p><b>Kế hoạch đầu tư: </b>3.6% hàng ngày mãi mãi</p>
+                <p><b>Gửi/Nhận:</b> $10/$4.92</p>
             </li>
             <li>
-                <a href="https://jaemoney.ltd/?ref=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Jaemoney.ltd ($40/$17.84)</a>
+                <a href="https://jaemoney.ltd/?ref=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Jaemoney.ltd</a>
                 <time>18:11 16-07-2021</time>
-                <p>1% hàng ngày trong 10 ngày (hoàn trả tiền gửi)</p>
+                <p><b>Kế hoạch đầu tư: </b>1% hàng ngày trong 10 ngày (hoàn trả tiền gửi)</p>
+                <p><b>Gửi/Nhận:</b> $40/$17.84</p>
             </li>
             <li>
-                <a href="https://www.yacht-company.com/?r=10674" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Yacht-company.com ($30/$12.6)</a>
+                <a href="https://www.yacht-company.com/?r=10674" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Yacht-company.com</a>
                 <time>20:31 02-07-2021</time>
-                <p>1% hàng ngày trong 90 ngày (hoàn trả tiền gửi)</p>
+                <p><b>Kế hoạch đầu tư: </b>1% hàng ngày trong 90 ngày (hoàn trả tiền gửi)</p>
+                <p><b>Gửi/Nhận:</b> $30/$12.6</p>
             </li>
             <li>
-                <a href="https://blackcryptomining.com/?ref=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Blackcryptomining.com ($22/$13.35)</a>
+                <a href="https://blackcryptomining.com/?ref=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Blackcryptomining.com</a>
                 <time>12:52 07-07-2021</time>
-                <p>101% - 144% sau 1 ngày, 5555% sau 55 ngày (bao gồm tiền gửi)</p>
+                <p><b>Kế hoạch đầu tư: </b>101% - 144% sau 1 ngày, 5555% sau 55 ngày (bao gồm tiền gửi)</p>
+                <p><b>Gửi/Nhận:</b> $22/$13.35</p>
             </li>
             <li>
-                <a href="https://lutex.ltd/?user=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Lutex.ltd ($10/$3.5)</a>
+                <a href="https://lutex.ltd/?user=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Lutex.ltd</a>
                 <time>22:20 25-06-2021</time>
-                <p>1% hàng ngày trong 25 ngày làm việc (hoàn trả tiền gửi)</p>
+                <p><b>Kế hoạch đầu tư: </b>1% hàng ngày trong 25 ngày làm việc (hoàn trả tiền gửi)</p>
+                <p><b>Gửi/Nhận:</b> $10/$3.5</p>
             </li>
             <li>
-                <a href="https://ship-alliance.com/?ref=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Ship-alliance.com ($10/$7.4)</a>
+                <a href="https://ship-alliance.com/?ref=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Ship-alliance.com</a>
                 <time>19:04 23-06-2021</time>
-                <p>0.8% hàng ngày trong 150 ngày (bao gồm tiền gửi)</p>
+                <p><b>Kế hoạch đầu tư: </b>0.8% hàng ngày trong 150 ngày (bao gồm tiền gửi)</p>
+                <p><b>Gửi/Nhận:</b> $10/$7.4</p>
             </li>
             <li>
-                <a href="https://cryptofarm.vip/?ref=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Cryptofarm.vip ($10/$14.6)</a>
+                <a href="https://cryptofarm.vip/?ref=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Cryptofarm.vip</a>
                 <time>16:31 31-05-2021</time>
-                <p>3% hàng ngày trong 50 ngày làm việc (bao gồm tiền gửi)</p>
+                <p><b>Kế hoạch đầu tư: </b>3% hàng ngày trong 50 ngày làm việc (bao gồm tiền gửi)</p>
+                <p><b>Gửi/Nhận:</b> $10/$14.6</p>
             </li>
             <li>
-                <a href="https://albet.io/nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Albet.io ($30/$37.78)</a>
+                <a href="https://albet.io/nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Albet.io</a>
                 <time>03:33 04-07-2021</time>
-                <p>6.3% hàng ngày trong 20 ngày làm việc (bao gồm tiền gửi)</p>
+                <p><b>Kế hoạch đầu tư: </b>6.3% hàng ngày trong 20 ngày làm việc (bao gồm tiền gửi)</p>
+                <p><b>Gửi/Nhận:</b> $30/$37.78</p>
             </li>
             <li>
-                <a href="https://raise-up.org?ref=nguoique" target="_blank"><i class="fas fa-pause-circle"></i> Raise-up.org ($10/$12)</a>
+                <a href="https://raise-up.org?ref=nguoique" target="_blank"><i class="fas fa-pause-circle"></i> Raise-up.org</a>
                 <time>18:52 22-07-2021</time>
-                <p>103% - 140% sau 1 ngày (bao gồm tiền gửi)</p>
+                <p><b>Kế hoạch đầu tư: </b>103% - 140% sau 1 ngày (bao gồm tiền gửi)</p>
+                <p><b>Gửi/Nhận:</b> $10/$12</p>
             </li>
             <li>
-                <a href="https://fxhourly.com/signup.aspx?ref=nguoique" target="_blank"><i class="fas fa-pause-circle"></i> Fxhourly.com ($40/$44.74)</a>
+                <a href="https://fxhourly.com/signup.aspx?ref=nguoique" target="_blank"><i class="fas fa-pause-circle"></i> Fxhourly.com</a>
                 <time>20:41 15-07-2021</time>
-                <p>100.2% sau một giờ (bao gồm tiền gửi)</p>
+                <p><b>Kế hoạch đầu tư: </b>100.2% sau một giờ (bao gồm tiền gửi)</p>
+                <p><b>Gửi/Nhận:</b> $40/$44.74</p>
             </li>
             <li>
-                <a href="https://lumino.cloud/?ref=nguoique" target="_blank"><i class="fas fa-pause-circle"></i> Lumino.cloud ($10/$11.66)</a>
+                <a href="https://lumino.cloud/?ref=nguoique" target="_blank"><i class="fas fa-pause-circle"></i> Lumino.cloud</a>
                 <time>19:56 11-07-2021</time>
-                <p>100.5% sau 1 ngày (bao gồm tiền gửi)</p>
+                <p><b>Kế hoạch đầu tư: </b>100.5% sau 1 ngày (bao gồm tiền gửi)</p>
+                <p><b>Gửi/Nhận:</b> $10/$11.66</p>
             </li>
             <li>
-                <a href="https://101profit.biz/?ref=nguoique" target="_blank"><i class="fas fa-pause-circle"></i> 101profit.biz ($10/$11.6)</a>
+                <a href="https://101profit.biz/?ref=nguoique" target="_blank"><i class="fas fa-pause-circle"></i> 101profit.biz</a>
                 <time>12:00 11-07-2021</time>
-                <p>101% sau 3 ngày (bao gồm tiền gửi)</p>
+                <p><b>Kế hoạch đầu tư: </b>101% sau 3 ngày (bao gồm tiền gửi)</p>
+                <p><b>Gửi/Nhận:</b> $10/$11.6</p>
             </li>
         </ul>
         <ul class="scamed">
             <li>
-                <a href="https://oxenbitex.com/?ref=nguoique" target="_blank"><i class="fas fa-poop"></i> Oxenbitex.com ($10/$16.2)</a>
+                <a href="https://oxenbitex.com/?ref=nguoique" target="_blank"><i class="fas fa-poop"></i> Oxenbitex.com</a>
                 <time>21:30 13-07-2021</time>
-                <p>	135% sau 1 ngày (bao gồm tiền gửi)</p>
+                <p><b>Kế hoạch đầu tư: </b>135% sau 1 ngày (bao gồm tiền gửi)</p>
+                <p><b>Gửi/Nhận:</b> $10/$16.2</p>
             </li>
             <li>
-                <a href="https://h-earning.biz/?ref=nguoique" target="_blank"><i class="fas fa-poop"></i> H-earning.biz ($10/$4.61)</a>
+                <a href="https://h-earning.biz/?ref=nguoique" target="_blank"><i class="fas fa-poop"></i> H-earning.biz</a>
                 <time>18:28 22-07-2021</time>
-                <p>8.37% hàng giờ trong 12 giờ (bao gồm tiền gửi)</p>
+                <p><b>Kế hoạch đầu tư: </b>8.37% hàng giờ trong 12 giờ (bao gồm tiền gửi)</p>
+                <p><b>Gửi/Nhận:</b> $10/$4.61</p>
             </li>
             <li>
-                <a href="https://hugeprofits.cc/?ref=nguoique" target="_blank"><i class="fas fa-poop"></i> Hugeprofits.cc ($10/$9.4)</a>
+                <a href="https://hugeprofits.cc/?ref=nguoique" target="_blank"><i class="fas fa-poop"></i> Hugeprofits.cc</a>
                 <time>00:13 18-07-2021</time>
-                <p>	15% hàng giờ trong 10 giờ (bao gồm tiền gửi)</p>
+                <p><b>Kế hoạch đầu tư: </b>15% hàng giờ trong 10 giờ (bao gồm tiền gửi)</p>
+                <p><b>Gửi/Nhận:</b> $10/$9.4</p>
             </li>
             <li>
-                <a href="https://bitpush.biz/?ref=nguoique" target="_blank"><i class="fas fa-poop"></i> Bitpush.biz ($10/$5.83)</a>
+                <a href="https://bitpush.biz/?ref=nguoique" target="_blank"><i class="fas fa-poop"></i> Bitpush.biz</a>
                 <time>23:28 17-07-2021</time>
-                <p>1.7% hàng giờ trong 72 giờ (bao gồm tiền gửi)</p>
+                <p><b>Kế hoạch đầu tư: </b>1.7% hàng giờ trong 72 giờ (bao gồm tiền gửi)</p>
+                <p><b>Gửi/Nhận:</b> $10/$5.83</p>
             </li>
             <li>
-                <a href="https://aura4.finance/?ref=2106" target="_blank"><i class="fas fa-poop"></i> Aura4.finance ($10/$21.7)</a>
+                <a href="https://aura4.finance/?ref=2106" target="_blank"><i class="fas fa-poop"></i> Aura4.finance</a>
                 <time>23:25 13-06-2021</time>
-                <p>3% hàng ngày trong 30 ngày (hoàn trả tiền gửi)</p>
+                <p><b>Kế hoạch đầu tư: </b>3% hàng ngày trong 30 ngày (hoàn trả tiền gửi)</p>
+                <p><b>Gửi/Nhận:</b> $10/$21.7</p>
             </li>
             <li>
-                <a href="https://crypto-capital.biz/?ref=nguoique" target="_blank"><i class="fas fa-poop"></i> Crypto-capital.biz ($40/$26.8)</a>
+                <a href="https://crypto-capital.biz/?ref=nguoique" target="_blank"><i class="fas fa-poop"></i> Crypto-capital.biz</a>
                 <time>13:29 07-07-2021</time>
-                <p>2% hàng ngày trong 6 ngày (hoàn trả tiền gửi)</p>
+                <p><b>Kế hoạch đầu tư: </b>2% hàng ngày trong 6 ngày (hoàn trả tiền gửi)</p>
+                <p><b>Gửi/Nhận: </b>$40/$26.8</p>
             </li>
         </ul>
     </main>
