--- a/index.html
+++ b/index.html
@@ -32,12 +32,6 @@
     <main>
         <ul class="paying">
             <li>
-                <a href="https://bico.finance/?ref=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Bico.finance</a>
-                <time>21:15 16-07-2021</time>
-                <p><b>Kế hoạch đầu tư: </b>3.6% hàng ngày mãi mãi</p>
-                <p><b>Gửi/Nhận:</b> $10/$4.92</p>
-            </li>
-            <li>
                 <a href="https://jaemoney.ltd/?ref=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Jaemoney.ltd</a>
                 <time>18:11 16-07-2021</time>
                 <p><b>Kế hoạch đầu tư: </b>1% hàng ngày trong 10 ngày (hoàn trả tiền gửi)</p>
@@ -105,6 +99,12 @@
             </li>
         </ul>
         <ul class="scamed">
+            <li>
+                <a href="https://bico.finance/?ref=nguoique" target="_blank"><i class="fas fa-poop"></i> Bico.finance</a>
+                <time>21:15 16-07-2021</time>
+                <p><b>Kế hoạch đầu tư: </b>3.6% hàng ngày mãi mãi</p>
+                <p><b>Gửi/Nhận:</b> $10/$4.92</p>
+            </li>
             <li>
                 <a href="https://oxenbitex.com/?ref=nguoique" target="_blank"><i class="fas fa-poop"></i> Oxenbitex.com</a>
                 <time>21:30 13-07-2021</time>
