--- a/index.html
+++ b/index.html
@@ -32,12 +32,6 @@
     <main>
         <ul class="paying">
             <li>
-                <a href="https://jaemoney.ltd/?ref=nguoique" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Jaemoney.ltd</a>
-                <time>18:11 16-07-2021</time>
-                <p><b>Kế hoạch đầu tư: </b>1% hàng ngày trong 10 ngày (hoàn trả tiền gửi)</p>
-                <p><b>Gửi/Nhận:</b> $40/$58.64</p>
-            </li>
-            <li>
                 <a href="https://www.yacht-company.com/?r=10674" target="_blank"><i class="fas fa-sync fa-spin fa-sm"></i> Yacht-company.com</a>
                 <time>20:31 02-07-2021</time>
                 <p><b>Kế hoạch đầu tư: </b>1% hàng ngày trong 90 ngày (hoàn trả tiền gửi)</p>
@@ -72,6 +66,12 @@
                 <time>03:33 04-07-2021</time>
                 <p><b>Kế hoạch đầu tư: </b>6.3% hàng ngày trong 20 ngày làm việc (bao gồm tiền gửi)</p>
                 <p><b>Gửi/Nhận:</b> $30/$38.41</p>
+            </li>
+            <li>
+                <a href="https://jaemoney.ltd/?ref=nguoique" target="_blank"><i class="fas fa-pause-circle"></i> Jaemoney.ltd</a>
+                <time>18:11 16-07-2021</time>
+                <p><b>Kế hoạch đầu tư: </b>1% hàng ngày trong 10 ngày (hoàn trả tiền gửi)</p>
+                <p><b>Gửi/Nhận:</b> $40/$58.64</p>
             </li>
             <li>
                 <a href="https://raise-up.org?ref=nguoique" target="_blank"><i class="fas fa-pause-circle"></i> Raise-up.org</a>
